# ProjetMath4RVJV

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
include/: Bezier.h  Clipper.h  CommonTypes.h  CubicBezierSequence.h  Filler.h  GUI.h  InputHandler.h  IntersectionMarkers.h  MathUtils.h  Matrix.h  PolyBuilder.h  PolyTypes.h  Polygon.h  Shader.h  Vertex.h
shaders/: vertex.glsl  vertex_fill.glsl
src/: Bezier.cpp  Clipper.cpp  CubicBezierSequence.cpp  Filler.cpp  GUI.cpp  InputHandler.cpp  MathUtils.cpp  PolyBuilder.cpp  Polygon.cpp  Shader.cpp  main.cpp
